Unify tile numbering for Manzu (9-17), fix All Manzu bonus logic, robust experiment scripts and results saving

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -164,7 +164,8 @@
     </div>
     
     <div style="text-align:center; margin-bottom: 20px;">
-        <button id="ai-suggest-btn" style="padding: 8px 20px; font-size: 16px;">AI Suggestion</button>
+        <!-- Comment out or hide the AI Suggestion button -->
+        <!-- <button id="ai-suggest-btn" style="padding: 8px 20px; font-size: 16px;">AI Suggestion</button> -->
     </div>
     <div id="ai-suggest-message" style="text-align:center; font-size:18px; color:#2b7a0b; margin-bottom: 10px;"></div>
     
